kind of fix overflow

--- a/src/modules/styles/index.css
+++ b/src/modules/styles/index.css
@@ -24,9 +24,6 @@ li {
 	list-style-type: none;
 }
 
-a, button {
-	font-family: var(--font-mono);
-}
 
 /* clears the ‘X’ from Internet Explorer */
 input[type=search]::-ms-clear { display: none; width : 0; height: 0; }
